--- a/Proyecto#1/style.css
+++ b/Proyecto#1/style.css
@@ -31,23 +31,28 @@ align-items: center;
 justify-content: space-between;
 padding: 15px 11%;
 }
+
 .logo{
 width: 160px;
 height: 60px;
 object-fit: cover;
 }
+
 .icono{
     width: 18px;
     margin-right: 5px;;
 }
+
 .flechita{
 width: 10px;
 margin-left: 10px;
 }
+
 nav div {
     display: flex;
     align-items: center;
 }
+
 nav div a {
 display: inline-flex;
 align-items: center;
@@ -59,10 +64,12 @@ border-radius: 5px;
 cursor: pointer;
 font-size: 14px;
 }
+
 nav div a:first-child {
 background: #000;
 border: 1px solid #666;
 }
+
 .conteiner {
 position: absolute;
 top: 50%;
@@ -71,40 +78,47 @@ transform: translate(-50%, -50%);
 text-align: center;
 padding-top: 5%;
 }
-.conteiner h1 {
-font-size: 3.8rem;
-margin-bottom: 20px;
-letter-spacing: -3px;
+
+.conteiner h1{
+ font-size: 3.8rem;
+ margin-bottom: 20px;
+ letter-spacing: -3px;
 }
+  
 .conteiner h3 {
-font-weight: 500;
-margin-bottom: 30px;
+   font-weight: 500;
+   margin-bottom: 30px;
 }
+
 .conteiner p {
     font-size: 16px;
     line-height: 2vw;
     margin-bottom: 20px;
 }
+
 .conteiner div {
-display: flex;
-align-items: center;
-justify-content: center;
+   display: flex;
+   align-items: center;
+   justify-content: center;
 }
+
 .start-input {
     width: 400px;
     height: 50px;
     padding: 10px;
     border: 1px solid #575656;
-    border-radius: 4px;
+    border-radius: 4px  ;
     background-color: rgba(11, 11, 11, 0.623);
     outline: 0;
     color: #fff;
     padding-top: 20px;
     font-size: 16px;
 }
+
 .start-input::placeholder {
     color: #fff;
 }
+
 .start-btn {
     width: 200px;
     height: 50px;
@@ -116,3 +130,57 @@ justify-content: center;
     margin-left: 10px;
     cursor: pointer;
 }
+
+.sub-title {
+    margin-bottom: 20px;
+    margin-top: 10px;
+    font-size: 25px;
+}
+
+.parte2 {
+    width: 1347px;
+    height: 1000px;
+    position: relative;
+    top: 1000px;
+    left: 0px;
+    background: color #000;
+    border-top: 5px solid #ff1b1b;
+    padding: 110px;}
+
+.beneficios{
+    display: grid;
+    grid-template-columns: repeat(auto-fit ,minmax(250px, 1fr));
+    column-gap: 15px;
+    row-gap: 15px;
+    margin-bottom: 30px;
+}
+
+.beneficios div{
+    width: 100%;
+    border-radius: 10px;
+    padding: 20px;
+    background-image: linear-gradient(to bottom, #1c1a33, #381b41);
+    height: 300px;
+    position: relative;
+}
+
+.beneficios div h3{
+    margin-bottom: 10px;
+}
+
+.beneficios div p{
+    font-size: 15px;
+}
+
+.beneficios div img{
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+}
+
+.sub-title h3{
+    height: 70px;
+}
+
+
+    
